add socket.io for future wiring

--- a/public/app/partials/viewer.html
+++ b/public/app/partials/viewer.html
@@ -1,1 +1,8 @@
-<div auto-refresh="100" ></div>
+<img auto-refresh="1000" />
+<div>
+    <input ng-model="dataToSend">
+    <button ng-click="emitBasic()">Send</button>
+    <button ng-click="emitACK()">Send (ACK)</button>
+    <div>Server Response: {{ serverResponse }}</div>
+    <div>Server Response (ACK): {{ serverResponseACK }}</div>
+</div>
